# C4E_HomeAgentTest

./: .env.example  README.md  ct.toml  pyproject.toml  requirements.txt  setup.sh
core/agents/: llm_agent.py  llm_agent_falcon_rw_1b.py  llm_agent_mistral.py  llm_agent_mistral_magyar_jetson.py  llm_agent_phi2.py  llm_agent_tinyllama.py
core/interfaces/: base.py
core/simulation/: environment.py
core/strategy/: energy_optimization.py
core/utils/: config.py
experiments/: llm_agent.py  smart_home_agent.py
tests/: conftest.py
tests/integration/: test_simulation.py
tests/unit/: test_environment.py  test_llm_agent.py  test_llm_agent_mistral.py
